[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/fonts/Retro Gaming.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/sounds/items/Radio_voices.ogg" type="AudioStream" id=2]
[ext_resource path="res://world/resources/final_fransit.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/environment/Parte_BB.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/environment/Voz.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/environment/Parte_AA.ogg" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Text1:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Text2:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Text3:percent_visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "credits"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5.8, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "radio"
length = 36.5
tracks/0/type = "value"
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Text1:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 8.1, 11.4, 12.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Text2:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 13, 17.3, 20.8, 22.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Text3:percent_visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 23, 29.8, 33.1, 35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0, 0.0 ]
}

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 1 )

[node name="FinalTransit" type="CanvasLayer"]
physics_interpolation_mode = 2
script = ExtResource( 3 )

[node name="Animation" type="AnimationPlayer" parent="."]
autoplay = "fade_out"
anims/RESET = SubResource( 1 )
anims/credits = SubResource( 5 )
anims/fade_out = SubResource( 4 )
anims/radio = SubResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Text1" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Cambio a alguien allí, hay un accidente de tren aquí, necesitamos ayuda, ¿está todo bien allí? me apago"
align = 1
valign = 1
autowrap = true
percent_visible = 0.0

[node name="Text2" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "cambio, si, a alguien aqui un accidente de tren, que curioso me parece que aqui paso lo mismo"
align = 1
valign = 1
autowrap = true
percent_visible = 0.0

[node name="Text3" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "bueno parece que nadie resulto herido, asi que creo que todo esta bien, pero las cosas me parecen raras, las cosas me parecen demasiado familiares…"
align = 1
valign = 1
autowrap = true
percent_visible = 0.0

[node name="RadioFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="PartAA" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="PartBB" type="AudioStreamPlayer" parent="."]
physics_interpolation_mode = 2
stream = ExtResource( 4 )

[node name="Voice" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
